# practica-calificada-4-mrg2000

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  Includes.cpp  Includes.h  README.md  funciones.cpp  main.cpp
